2006-11-25  Hubert Figuiere  <hub@figuiere.net>

	* configure.ac: version post 2.3.0 because 2.3.0 has
	been branched.

2006-03-23  Marcus Meissner  <marcus@jet.franken.de>

	* gphoto2/{main,action}.{ch}: Added
	  "--wait-event" functionality to exercise/test new
	  gp_camera_wait_for_event() functionality.

2006-03-18  Marcus Meissner  <marcus@jet.franken.de>

	* gphoto2/main.c: Allow wildcard gphoto2 -u *
	  upload, download and deletion, by handling the
	  rest of the arguments after popt option handling.

	* gphoto2/shell.c: Added "put" shell cmd.
	  Added "list-config", "set-config", "get-config" shell
	  cmds. Added "capture-image" shell cmd.

2006-03-11  Hubert Figuiere  <hub@figuiere.net>

	* doc/gphoto2.1: Fix a typo in the man page. Patch
	by <jnovy AT redhat DOT com>

2006-02-17  Marcus Meissner  <marcus@jet.franken.de>
	
	* gphoto2/actions.c: Fixed --port handling 
	  when supplying regexp matched devices, by
	  keeping the GPPortInfoList* over the gphoto2 
	  runtime.

2006-01-27  Theodore Kilgore  <kilgota@auburn.edu>

	* gphoto2/actions.c: added an entry for "Delete all" to 
	action_camera_show_abilities.

2006-01-01  Hubert Figuiere  <hub@figuiere.net>

	* configure.ac: version 2.1.99

2005-12-30  Hubert Figuiere  <hub@figuiere.net>

	* configure.ac: require libgphoto2 2.1.99

2005-05-13 Marcus Meissner  <marcus@jet.franken.de>

	* po/eu.po: baskish translation from dooteo <dooteo@euskalgnu.org>

2005-04-14 Hans Ulrich Niedermann <gp@n-dimensional.de>

	* */configure.in, */Makefile.am, ...: updated build system.
	  See "./autogen.sh --help" and ./configure --help" for help.
	* m4/, m4m/: use common m4 macro dir "m4m" now ("cvs co m4m")

2005-04-13  Colin Marquardt  <colin@marquardt-home.de>

	* configure.in (ALL_LINGUAS): Added rw.
	* po/rw.po: New file courtesy Steve Murphy.
	* po/nl.po, po/sk.po, po/sr.po, po/cs.po: Update.

2005-01-17  Colin Marquardt  <colin@marquardt-home.de>

	* po/ja.po: Update thanks to Takeshi AIHANA.
